# msdata

./: CMakeLists.txt  README.md  changelog  config.h.cmake
debian/: changelog  files  msdata.substvars
debian/msdata-dev/DEBIAN/: control  md5sums
debian/msdata/DEBIAN/: control  md5sums  shlibs
debian/msdata/usr/lib/x86_64-linux-gnu/: libkmsmsdataimpl.so.0.0.1~14.g3e875da
debian/tmp/usr/lib/x86_64-linux-gnu/: libkmsmsdataimpl.so.0  libkmsmsdataimpl.so.0.0.1~14.g3e875da
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h  install_manifest.txt
obj-x86_64-linux-gnu/src/: Makefile  cmake_install.cmake
obj-x86_64-linux-gnu/src/gst-plugins/: Makefile  cmake_install.cmake
obj-x86_64-linux-gnu/src/server/: Makefile  cmake_install.cmake  generate_kmd_include.cmake  module_version.cpp  msdata.kmd.json
obj-x86_64-linux-gnu/src/server/implementation/generated-cpp/: KmsMsDataImplFactory.hpp  KmsMsDataImplInternal.cpp  Module.cpp  SerializerExpanderMsdata.cpp
src/gst-plugins/: CMakeLists.txt  kmschartermetadata.cpp  kmschartermetadata.h  kmsfacedetectormetadata.c  kmsfacedetectormetadata.cpp  kmsfacedetectormetadata.cpp~  kmsgraphcmetadata.cpp  kmsgraphcmetadata.h  kmsgraphsmetadata.cpp  kmsgraphsmetadata.h  kmsimageoverlaymetadata.cpp  kmsimageoverlaymetadata.cpp~  kmsmisc.cpp  kmsmisc.cpp~  kmsmisc.h  kmsmisc.h~  kmsmsdata.cpp  kmsmsdata.h  kmsmsdatagraph.cpp  kmsmsdatagraph.h  kmsmsdatamodule.c  kmsshowdata.cpp  kmsshowdata.cpp~  kmsshowdata.h  msdata.c
src/server/implementation/objects/: KmsCharterImpl.cpp  KmsCharterImpl.cpp~  KmsCharterImpl.hpp  KmsCharterImpl.hpp~  KmsDetectFacesImpl.cpp  KmsDetectFacesImpl.hpp  KmsGGDImpl.cpp  KmsGGDImpl.hpp  KmsMsDataImpl.cpp  KmsMsDataImpl.hpp  KmsSGDImpl.cpp  KmsSGDImpl.hpp  KmsShowDataImpl.cpp  KmsShowDataImpl.hpp  KmsShowFacesImpl.cpp  KmsShowFacesImpl.hpp
src/server/interface/: msdata.MsData.kmd.json  msdata.kmd.json  msdata.msdata.kmd.json
(+7 files in other folders)
